Changelog
=========

2.1.6 - Unreleased
------------------

- Nothing changed yet.


2.1.5 - 2011-06-19
------------------

- Fixed i18n regression caused by the pep8 cleanup.
  [vincentfretin]


2.1.4 - 2011-05-11
------------------

- Fixed navigation portlet when include top activated
  and no navigation root selected (bug appears behind apache).
  [thomasdesvenain]

- Sort exported portlet types and portlet manager registrations by name to
  avoid intermittent test failures.
  [davisagli]


2.1.3 - 2011-04-21
------------------

- Let the portlets import step depend on the content import step
  again.  Refs http://dev.plone.org/plone/ticket/8350
  [maurits]

- Add test ``testINavigationRootWithRelativeRootSet``.
  Cfr. http://dev.plone.org/plone/ticket/8787
  [anthonygerrard, WouterVH]

- Add MANIFEST.in.
  [WouterVH]

- Fix circular dependency in import steps.
  This partially fixes http://dev.plone.org/plone/ticket/8350
  [kiorky]


2.1.2 - 2011-02-10
------------------

- Enable managing portlets of default pages.
  This fixes http://dev.plone.org/plone/ticket/10672
  [fRiSi]

- Be more graceful, when user doesn't belong to groups - e.g. when user is
  defined in non-PAS based top-level acl_users folder.
  Fixes http://dev.plone.org/plone/ticket/9929
  [thet]


2.1.1 - 2011-01-03
------------------

- Depend on ``Products.CMFPlone`` instead of ``Plone``.
  [elro]


2.0.2 - 2010-12-23
------------------

- Recover from parse error on ``updated`` date.
  [malthe]

- Display full creator name in review portlet.
  [thomasdesvenain]

- Do not display portlets add select list if it is empty.
  [thomasdesvenain]

- Recent items and Review list portlets title is got by a title attribute
  on the renderer.
  [thomasdesvenain]

- Fix the IPortletDirective schema's default edit_permission to match
  the default that is actually supplied by the directive's implementation.
  [davisagli]

- Fix RSS portlet edge case. The feedparser may not have a 'bozo' attribute